Исправление замечаний после коммита